<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/header_container" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/applogo" />

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="40dp"
        android:layout_marginRight="15dp"
        android:text="@string/txt_welcome"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="130dp"
        android:layout_marginRight="28dp"
        android:text="@string/txt_options"
        android:textColor="#0099CC"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_celsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_options"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/txt_in_c"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_celsius"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/txt_or"
        android:textAllCaps="true"
        android:textColor="#0099CC"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_fahrenheit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_or"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/txt_in_c"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>