<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CelsiusToFahrenheitActivity">

    <TextView
        android:id="@+id/txt_celsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/txt_in_c"
        android:textColor="@color/purple_200"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_celsius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_celsius"
        android:layout_marginTop="18dp"
        android:hint="@string/hint_celsius"
        android:inputType="numberDecimal|numberSigned"
        android:maxLength="6"
        android:textColor="#2B2828"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_celsius_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_celsius"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/btn_convert"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txt_celsiusfahrenheit_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_celsius_result"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>